--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,7 +1,3 @@
-body {
-    overflow: hidden;
-}
-
 .main {
     background: url(../img/bg.png) no-repeat center center; 
           -webkit-background-size: cover;
@@ -10,11 +6,36 @@ body {
           background-size: cover;
 /*    background-position: 20% 20%;*/
     padding: 3em 3em 3em 3em;
-    height: 70%;
+    height: 40em;
+    position: relative;
+}
+
+.output {
+    background-color: rgba(255,255,255,0.7);
+    display: inline-block;
+    border: 2px solid black;
+}
+
+div#inv {
+    position: absolute;
+    bottom: 0;
+    left: 15%;
+    margin-bottom: 5%;
+    width: 10%;
+    padding: 1em 1em 1em 1em;
+}
+
+div#text {
+    position: absolute;
+    bottom: 0;
+    right: 15%;
+    margin-bottom: 5%;
+    width: 40%;
+    padding: 2em 2em 2em 2em;
 }
 
 .controls {
-    height: 30%;
+    height: 10em;
 }
 
 div {
