--- a/html/css/style.css
+++ b/html/css/style.css
@@ -12,9 +12,9 @@ body {
           -moz-background-size: cover;
           -o-background-size: cover;
           background-size: cover;
-    background-position: 20% 20%;
     padding: 3em 3em 3em 3em;
-    height: 100%;
+    height: 70%;
+    width: auto;
     position: relative;
 }
 
