Fixed gametest.html redirect, added links to other rooms and fixed transporter

--- a/remote/css/style.css
+++ b/remote/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .main {
-    background: url(../img/bg2.png) no-repeat center center; 
+    background: url(../img/000.png) no-repeat center center; 
           -webkit-background-size: cover;
           -moz-background-size: cover;
           -o-background-size: cover;
